# GiGAStreamer

./: .gitignore  CMakeLists.txt  README.md  build.sh  diff  glsm.config  mp4  run.sh  shutdown.sh  status_check.sh
libs/: build_dependencies.sh  uri.patch
source/: controller_manager.cpp  controller_manager.hpp  machine_controller.cpp  machine_controller.hpp  main.cpp  microsvc_controller.cpp  microsvc_controller.hpp  rest_client.hpp  stream_controller.cpp  stream_controller.hpp  websocket_service.hpp
source/base/: basic_controller.cpp  runtime_utils.cpp
source/base/include/: basic_controller.hpp  controller.hpp  gls_interface.hpp  glsm_utils.hpp  log.hpp  network_utils.hpp  runtime_utils.hpp  streaming-object.h  streaming-server.h  usr_interrupt_handler.hpp
source/foundation/: basic_controller.cpp  network_utils.cpp
source/foundation/include/: basic_controller.hpp  event.hpp  glsm_utils.hpp  network_utils.hpp
source/streamer/: streaming-object.cpp  streaming-server.cpp
tests/wrk/: benchmark_microsvc.lua
